Added Comments, finalize parameters, Slight refactoring for unused code, Added comments to code not being utilized, Removed Magic Numbers Maze